# interlink

./: Cargo.toml  README.md
interlink/: Cargo.toml
interlink-derive/: Cargo.toml
interlink-derive/src/: lib.rs
interlink/src/: envelope.rs  lib.rs  link.rs  msg.rs  prelude.rs  service.rs
interlink/src/ext/: mod.rs  sink.rs  stream.rs
src/: ctx.rs  envelope.rs  lib.rs  link.rs  message.rs  msg.rs  prelude.rs  service.rs
