[package]
name = "interlink"
version = "0.1.1"
description = "Framework for writing async code"

edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
tokio = { version = "1", features = ["sync"] }
interlink-derive = { version = "0.1.0", path = "../interlink-derive" }

futures-sink = { version = "^0.3", optional = true }
futures-core = { version = "^0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["sinks", "streams"]

# Feature for working with sinks
sinks = ["dep:futures-sink"]

# Feature for working with streams
streams = ["dep:futures-core"]
